--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Phishing, Flaming, and Spamming</h1>
+<p>•	Phishing- the fraudulent practice of sending emails purporting to be from reputable companies in order to induce individuals to reveal personal information, such as passwords and credit card numbers
+•	Flaming- a hostile and insulting interaction between persons over the Internet, often involving the use of profanity
+•	Spamming- sending the same message indiscriminately to (large numbers of recipients) on the Internet.
+
+Phishing, flaming, and spamming: Though very different, they do have some similarity due to the fact that they are all unwanted messages that can hurt the receiver. Flaming is probably the most different out of the three because it has no other intention aside from hurting the receiver. Though phishing and spamming can also hurt the receiver, they do this for personal gain. Flaming only exists to be malevolent. Phishing is different from spamming because spamming is not used to receive personal information. Instead, spamming is mostly used to promote things like services.
+</p>
 
 </body>
 </html>
