--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Tutorial</title>
+  <title>HTML Tutorial</title>
 </head>
 <body>
-
-<h1>Phishing, Flaming, and Spamming</h1>
-<p>•	Phishing- the fraudulent practice of sending emails purporting to be from reputable companies in order to induce individuals to reveal personal information, such as passwords and credit card numbers
-•	Flaming- a hostile and insulting interaction between persons over the Internet, often involving the use of profanity
-•	Spamming- sending the same message indiscriminately to (large numbers of recipients) on the Internet.
-
-Phishing, flaming, and spamming: Though very different, they do have some similarity due to the fact that they are all unwanted messages that can hurt the receiver. Flaming is probably the most different out of the three because it has no other intention aside from hurting the receiver. Though phishing and spamming can also hurt the receiver, they do this for personal gain. Flaming only exists to be malevolent. Phishing is different from spamming because spamming is not used to receive personal information. Instead, spamming is mostly used to promote things like services.
-</p>
-
-</body>
+<div class="container">
+<div class="navbar">
+<h4>My Favorite Colors</h4>
+<ul>
+  <li>Red</li>
+  <li>Gray</li>
+  <li>Green</li>
+</ul>
+</div>
+<p>I like red because it is bold, disconcerting and untamed. Gray is another favorite color of mine because it reminds me that the world is not black and white. I enjoy green because it reminds me of one of my favorite people, who also enjoys green a lot; green also reminds me of <a href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwitmfud6JTdAhVtk-AKHZJhB2kQjRx6BAgBEAU&url=https%3A%2F%2Ftechcrunch.com%2F2018%2F04%2F10%2Fa-new-app-called-garden-helps-you-stay-in-touch-with-friends-and-family-without-facebook%2F&psig=AOvVaw0ndZJKSEbgsApMGDVHRNMD&ust=1535719801127070">gardening</a>, which is a passion of mine.
+<h1>Aiyana Page</h1>
+</div>
+</div>
+<body>
 </html>
-Try it Yourself »
